force-app/main/default/objects/Project_Resource__c/Project_Resource__c.object-meta.xml
<CustomObject>
    <description>Resource profiles</description>
    <label>Resource</label>
    <nameField>
        <label>Resource</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>