force-app/main/default/objects/Project_Resource__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to Contact record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N50000001dKBUEA2</relationshipName>
    <type>Lookup</type>
</CustomField>