force-app/main/default/objects/Project_Resource__c/fields/Platforms__c.field-meta.xml
<CustomField>
    <fullName>Platforms__c</fullName>
    <inlineHelpText>Platform skills for this Resource</inlineHelpText>
    <label>Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>Win</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>UNIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>