force-app/main/default/objects/Project_Resource__c/listViews/AllResources.listView-meta.xml
<ListView>
    <fullName>AllResources</fullName>
    <columns>NAME</columns>
    <columns>External_Resource__c</columns>
    <columns>Contact__c</columns>
    <columns>Platforms__c</columns>
    <columns>Languages__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Resources</label>
    <language>en_US</language>
</ListView>